Fixed parallax image error on mobile

--- a/sources/css/main.css
+++ b/sources/css/main.css
@@ -33,9 +33,9 @@ header {
 
 /*Changes image on mobile*/
 @media only screen 
-and (max-width: 480px) {
+and (max-width: 815px) {
     .parallax { 
-background-image: url("../images/mtr3.jpeg")!important;
+background-image: url("../images/IMG_3011.jpg")!important;
 background-size: cover;
 background-attachment: scroll !important;
 background-repeat: no-repeat;
